== 0.6

* :js now sets the flash.now by default, instead of flash

== 0.5

* Added Railtie and better Rails 3 support
* Added :flash_now as option

== 0.4

* Added Responders::FlashResponder.flash_keys and default to [ :notice, :alert ]
* Added support to respond_with(@resource, :notice => "Yes!", :alert => "No!")

== 0.1

* Added FlashResponder
* Added HttpCacheResponder
* Added responders generators