@@ -9,7 +9,7 @@ Gem::Specification.new do |s|
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Jos\303\251 Valim"]
-  s.date = %q{2010-04-03}
+  s.date = %q{2010-05-24}
   s.description = %q{A set of Rails 3 responders to dry up your application}
   s.email = %q{contact@plataformatec.com.br}
   s.extra_rdoc_files = [
@@ -17,13 +17,14 @@ Gem::Specification.new do |s|
   ]
   s.files = [
     "CHANGELOG.rdoc",
+     "Gemfile",
      "MIT-LICENSE",
      "README.rdoc",
      "Rakefile",
      "lib/generators/rails/USAGE",
      "lib/generators/rails/responders_controller_generator.rb",
      "lib/generators/rails/templates/controller.rb",
-     "lib/generators/responders_install_generator.rb",
+     "lib/generators/responders/install_generator.rb",
      "lib/responders.rb",
      "lib/responders/controller_method.rb",
      "lib/responders/flash_responder.rb",
